--- a/pybmix/core/pybmixcpp/CMakeLists.txt
+++ b/pybmix/core/pybmixcpp/CMakeLists.txt
@@ -1,7 +1,10 @@
-target_sources(bayesmix
-        PUBLIC
-        python_hierarchy.h
-        python_hierarchy.cc
-        py_global.h
-        py_global.cc
-)
+#target_sources(bayesmix
+ #       PUBLIC
+  #      python_hierarchy.h
+   #     python_hierarchy.cc
+    #    py_global.h
+     #   py_global.cc
+      #  includes.h
+       # load_hierarchies_2.h
+        ##run_mcmc.cc
+#)
